--- a/index.html
+++ b/index.html
@@ -617,6 +617,55 @@
       <!-- Contact With Us Section end -->
     </main>
     <!-- main section end -->
+    <!-- Footer Section Start -->
+    <footer class="contant-spaleing footer">
+      <div class="container">
+        <div class="row footer-p">
+          <div class="col-lg-3">
+            <img src="images/footer.png" alt="" class="mb-5" />
+            <p class="text-light-emphasis para-font fs-6">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour.
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <h2 class="text-white title-font fs-4 fw-bold mb-5">
+              Usefull Link
+            </h2>
+            <ul class="li para-font text-light-emphasis curser">
+              <li class="">Homes</li>
+              <li class="">About Us</li>
+              <li class="">Cases</li>
+              <li class="">Blog</li>
+              <li class="">Contact Us</li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <h2 class="text-white title-font fs-4 fw-bold mb-5">Contact Now</h2>
+            <address class="para-font text-light-emphasis">
+              555 4th 5t NW, Washington DC 20530, United States
+            </address>
+            <p class="para-font text-light-emphasis">
+              +88 01750 000 000 <br />
+              +88 01750 000 000
+            </p>
+            <p class="para-font text-light-emphasis">
+              info@gmail.com <br />
+              info@gmail.com
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <h2 class="text-white title-font fs-4 fw-bold mb-5">Subscribe</h2>
+            <p class="para-font text-light-emphasis">
+              Subscribe for our latest & Articles. We Won’t Give You Spam Mails
+            </p>
+            <img src="images/btn.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Section end -->
     <!-- Bootstrap JS file -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
